css disabled events

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -77,6 +77,10 @@ Theme Core 2021 @Jeedom
     white-space: pre;
   }
 
+  .disabled {
+    pointer-events: none;
+  }
+
 /* ______Main */
   .center {
     text-align: center;
