bugfix synthesis desktop/mobile - resume css flex for reliability - summary modale second size check - _SummaryObserver_ try/catch fix

--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -958,18 +958,18 @@ Theme Core 2021 @Jeedom
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 54px;
-    text-align: right;
   }
   .objectPreview > .bottomPreview > .resume {
-    position: absolute;
-    right: 6px;
-    bottom: 5px;
-    text-align: right;
     max-width: 100%;
     margin-right: 8px !important;
   }
 
+  .objectPreview > .bottomPreview > .resume > span {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap-reverse;
+    justify-content: flex-end;
+  }
 
   .objectPreview .objectSummaryParent,
   .objectPreview .objectSummaryParent i {
