--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -2199,6 +2199,10 @@ Theme Core 2021 @Jeedom
     letter-spacing: 2px;
   }
 
+  input[readonly] {
+    cursor: alias;
+  }
+
   .form-actions {
     margin-top: 5px;
   }
