--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -1430,10 +1430,6 @@ Theme Core 2021 @Jeedom
     padding: 0 0 0 0!important;
   }
 
-  #div_commandResult {
-    overflow: auto;
-  }
-
   #md_modal table.tablesorter {
     width: 100% !important;
     min-width: 100% !important;
@@ -1628,6 +1624,13 @@ Theme Core 2021 @Jeedom
   #editorContainer div.CodeMirror.CodeMirror-wrap {
     top: 55px !important;
   }
+
+  /* administration */
+  #div_commandResult > table > thead {
+    position: sticky;
+    top: 0;
+  }
+
 
   /* context menus */
   .context-menu-layer {
