--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -210,6 +210,7 @@ Theme Core 2021 @Jeedom
   }
   .dropdown-menu {
     z-index: 10 !important;
+    scrollbar-width: thin;
   }
   .dropdown-menu > li > a {
     color: var(--link-color)
@@ -544,14 +545,6 @@ Theme Core 2021 @Jeedom
   }
 
   /* résumé domo */
-  [data-page=display] .eqActions {
-    position: fixed;
-    right: 10px;
-    top: 52px;
-    border: 5px solid var(--bg-modal-color);
-    z-index: 10;
-  }
-
   [data-page=display] legend a,
   [data-page=display] legend i {
     color: inherit !important;
@@ -2256,7 +2249,6 @@ Theme Core 2021 @Jeedom
 
   [class*="col-"] {
     position: relative;
-    /*! min-height: 28px !important; */
     padding-left: 1em !important;
     padding-right: 1em !important;
   }
@@ -2609,6 +2601,36 @@ Theme Core 2021 @Jeedom
   .tab-content ul.nav.nav-tabs li a {
     border-top: 1px solid var(--el-defaultColor) !important;
   }
+
+  .floatingbar {
+    position: absolute;
+    top: 55px;
+    right: 10px;
+  }
+  .row-overflow .floatingbar {
+    top: 15px;
+    right: 15px;
+  }
+  .tab-pane .floatingbar {
+    top: 10px;
+    right: 15px;
+  }
+  body[data-page="administration"] .tab-content,
+  body[data-page="update"] .tab-content {
+    height: calc(100vh - 145px) !important;
+  }
+  body[data-page="update"] div.progressbarContainer:not(.hidden) + .nav-tabs + .tab-content {
+    height: calc(100vh - 200px) !important;
+  }
+  body[data-page="administration"] .tab-content .tab-content {
+    height: unset !important;
+  }
+  table.tablesorter > thead {
+    position: sticky;
+    top: 0;
+    z-index: 5;
+  }
+
   ul.nav.nav-tabs li,
   .nav-tabs > li > a {
     font-size: 14px;
@@ -2620,6 +2642,7 @@ Theme Core 2021 @Jeedom
     padding: 10px 6px;
     z-index: 3;
     border: 1px solid transparent !important;
+    border-bottom-color: rgba(var(--panel-bg-color), var(--opacity)) !important;
   }
   .nav-tabs > li.active > a,
   .nav-tabs > li.active > a:focus,
@@ -2628,7 +2651,7 @@ Theme Core 2021 @Jeedom
     background-color: rgba(var(--panel-bg-color), var(--opacity)) !important;
     color: var(--link-color) !important;
     border-bottom : 1px var(--logo-primary-color) solid !important;
-    z-index: 4;
+    z-index: 6;
   }
   .nav-tabs,
   .nav-tabs * {
