--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -259,6 +259,7 @@ Theme Core 2021 @Jeedom
   }
   #jeedomMenuBar ul.navbar-nav li ul a i {
     display: inline-flex;
+    justify-content: center;
     width: 20px;
     font-size: 14px;
     text-align: center;
