scenario copy/paste undo/redo fix - action templates events - synch select val - undo/redo autocomplete - action icon fix

--- a/core/template/scenario/report.default.html
+++ b/core/template/scenario/report.default.html
@@ -1,146 +1,148 @@
 <div class="input-group input-group-sm" style="width: calc(100% - 3px)">
-  <span class="input-group-addon roundedLeft" style="width:100px;">{{Exporter}}</span>
-  <select class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="type" data-cmd_id="#id#" data-uid="#uid#">
-    <option value="view">{{Vue}}</option>
-    <option value="plan">{{Design}}</option>
-    <option value="plugin">{{Plugin}}</option>
-    <option value="eqAnalyse">{{Equipement}}</option>
-    <option value="timeline">{{Timeline}}</option>
-    <option value="url">{{URL}}</option>
-  </select>
-  <span class="input-group-addon type view" data-cmd_id="#id#" data-uid="#uid#" style="width:100px;">{{Vue}}</span>
-  <select class="expressionAttr form-control input-sm type view roundedRight" data-l1key="options" data-l2key="view_id" data-cmd_id="#id#" data-uid="#uid#"></select>
-  
-  <span class="input-group-addon type plan" data-cmd_id="#id#" data-uid="#uid#" style="width:100px;display:none;">{{Design}}</span>
-  <select class="expressionAttr form-control input-sm type plan roundedRight" data-l1key="options" data-l2key="plan_id" data-cmd_id="#id#" data-uid="#uid#" style="display:none;"></select>
-  
-  <span class="input-group-addon type plugin" data-cmd_id="#id#" data-uid="#uid#" style="width:100px;display:none;">{{Panel}}</span>
-  <select class="expressionAttr form-control input-sm type plugin roundedRight" data-l1key="options" data-l2key="plugin_id" data-cmd_id="#id#" data-uid="#uid#" style="display:none;"></select>
-  
-  <span class="input-group-addon type timeline" data-cmd_id="#id#" data-uid="#uid#" style="width:100px;display:none;">{{Timeline}}</span>
-  <select class="expressionAttr form-control input-sm type timeline roundedRight" data-l1key="options" data-l2key="timeline" data-cmd_id="#id#" data-uid="#uid#" style="display:none;"></select>
-  
-  <span class="input-group-addon type url" data-cmd_id="#id#" data-uid="#uid#" style="width:100px;display:none;">{{URL}}</span>
-  <input class="expressionAttr form-control input-sm type url roundedRight" data-l1key="options" data-l2key="url" data-cmd_id="#id#" data-uid="#uid#" style="display:none;" />
+	<span class="input-group-addon roundedLeft" style="width:100px;">{{Exporter}}</span>
+	<select class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="type" data-cmd_id="#id#" data-uid="#uid#">
+		<option value="view">{{Vue}}</option>
+		<option value="plan">{{Design}}</option>
+		<option value="plugin">{{Plugin}}</option>
+		<option value="eqAnalyse">{{Equipement}}</option>
+		<option value="timeline">{{Timeline}}</option>
+		<option value="url">{{URL}}</option>
+	</select>
+	<span class="input-group-addon type view" data-cmd_id="#id#" data-uid="#uid#" style="width:100px;">{{Vue}}</span>
+	<select class="expressionAttr form-control input-sm type view roundedRight" data-l1key="options" data-l2key="view_id" data-cmd_id="#id#" data-uid="#uid#"></select>
+
+	<span class="input-group-addon type plan" data-cmd_id="#id#" data-uid="#uid#" style="width:100px;display:none;">{{Design}}</span>
+	<select class="expressionAttr form-control input-sm type plan roundedRight" data-l1key="options" data-l2key="plan_id" data-cmd_id="#id#" data-uid="#uid#" style="display:none;"></select>
+
+	<span class="input-group-addon type plugin" data-cmd_id="#id#" data-uid="#uid#" style="width:100px;display:none;">{{Panel}}</span>
+	<select class="expressionAttr form-control input-sm type plugin roundedRight" data-l1key="options" data-l2key="plugin_id" data-cmd_id="#id#" data-uid="#uid#" style="display:none;"></select>
+
+	<span class="input-group-addon type timeline" data-cmd_id="#id#" data-uid="#uid#" style="width:100px;display:none;">{{Timeline}}</span>
+	<select class="expressionAttr form-control input-sm type timeline roundedRight" data-l1key="options" data-l2key="timeline" data-cmd_id="#id#" data-uid="#uid#" style="display:none;"></select>
+
+	<span class="input-group-addon type url" data-cmd_id="#id#" data-uid="#uid#" style="width:100px;display:none;">{{URL}}</span>
+	<input class="expressionAttr form-control input-sm type url roundedRight" data-l1key="options" data-l2key="url" data-cmd_id="#id#" data-uid="#uid#" style="display:none;" />
 </div>
 <div class="input-group input-group-sm">
-  <span class="input-group-addon roundedLeft" style="width:100px;">{{Exporter en}}</span>
-  <select class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="export_type" data-cmd_id="#id#" data-uid="#uid#">
-    <option value="png">{{PNG}}</option>
-    <option value="pdf">{{PDF}}</option>
-  </select>
-  <span class="input-group-addon" style="width:100px;">{{Commandes}}</span>
-  <input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="cmd" placeholder="Commandes" value="#cmd#" data-cmd_id="#id#" data-uid="#uid#"/>
-  <span class="input-group-btn">
-    <button class="btn btn-default listEquipementInfo roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-uid="#uid#" data-cmd_id="#id#"><i class="fas fa-list-alt"></i></button>
-  </span>
+	<span class="input-group-addon roundedLeft" style="width:100px;">{{Exporter en}}</span>
+	<select class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="export_type" data-cmd_id="#id#" data-uid="#uid#">
+		<option value="png">{{PNG}}</option>
+		<option value="pdf">{{PDF}}</option>
+	</select>
+	<span class="input-group-addon" style="width:100px;">{{Commandes}}</span>
+	<input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="cmd" placeholder="Commandes" value="#cmd#" data-cmd_id="#id#" data-uid="#uid#"/>
+	<span class="input-group-btn">
+		<button class="btn btn-default listEquipementInfo roundedRight" type="button" tooltip="{{Sélectionner la commande}}" data-uid="#uid#" data-cmd_id="#id#"><i class="fas fa-list-alt"></i></button>
+	</span>
 </div>
 <div class="input-group input-group-sm" style="width: calc(100% - 3px)">
-  <span class="input-group-addon roundedLeft" style="width:100px;">{{Largeur (px)}}</span>
-  <input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="width" placeholder="1280" value="#width#" data-cmd_id="#id#" data-uid="#uid#"/>
-  <span class="input-group-addon" style="width:100px;">{{Hauteur (px)}}</span>
-  <input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="height" placeholder="720" value="#height#" data-cmd_id="#id#" data-uid="#uid#"/>
-  <span class="input-group-addon" style="width:100px;">{{Délai}}</span>
-  <input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="delay" placeholder="1000" value="#delay#" data-cmd_id="#id#" data-uid="#uid#"/>
-  <span class="input-group-addon" style="width:90px;">{{Option(s)}}</span>
-  <input class="expressionAttr form-control input-sm roundedRight" data-l1key="options" data-l2key="arg" value="#arg#" data-cmd_id="#id#" data-uid="#uid#"/>
+	<span class="input-group-addon roundedLeft" style="width:100px;">{{Largeur (px)}}</span>
+	<input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="width" placeholder="1280" value="#width#" data-cmd_id="#id#" data-uid="#uid#"/>
+	<span class="input-group-addon" style="width:100px;">{{Hauteur (px)}}</span>
+	<input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="height" placeholder="720" value="#height#" data-cmd_id="#id#" data-uid="#uid#"/>
+	<span class="input-group-addon" style="width:100px;">{{Délai}}</span>
+	<input class="expressionAttr form-control input-sm" data-l1key="options" data-l2key="delay" placeholder="1000" value="#delay#" data-cmd_id="#id#" data-uid="#uid#"/>
+	<span class="input-group-addon" style="width:90px;">{{Option(s)}}</span>
+	<input class="expressionAttr form-control input-sm roundedRight" data-l1key="options" data-l2key="arg" value="#arg#" data-cmd_id="#id#" data-uid="#uid#"/>
 </div>
 <script>
-  $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=type]').change(function(){
-    $(this).closest('select').removeClass('roundedRight')
-    $('.type[data-uid=#uid#]').hide();
-    $('.'+$(this).value()+'[data-uid=#uid#]').show();
-    if($(this).value() == 'eqAnalyse'){
-      $(this).closest('select').addClass('roundedRight')
-    }
-  });
-  
-  jeedom.view.all({
-    error: function (error) {
-      $('#div_alert').showAlert({message: error.message, level: 'danger'});
-    },
-    success: function (views) {
-      var options = '';
-      options += '<option value="">Aucune</option>';
-      for (var i in views) {
-        options += '<option value="' + views[i].id + '">' + views[i].name + '</option>';
-      }
-      $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=view_id]').append(options);
-      if ('#view_id#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=view_id] option[value=#view_id#]').html() != undefined) {
-        $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=view_id]').value('#view_id#');
-      }
-    }
-  });
-  jeedom.plan.allHeader({
-    error: function (error) {
-      $('#div_alert').showAlert({message: error.message, level: 'danger'});
-    },
-    success: function (plans) {
-      var options = '';
-      options += '<option value="">Aucun</option>';
-      for (var i in plans) {
-        options += '<option value="' + plans[i].id + '">' + plans[i].name + '</option>';
-      }
-      $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=plan_id]').append(options);
-      if ('#plan_id#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=plan_id] option[value=#plan_id#]').html() != undefined) {
-        $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=plan_id]').value('#plan_id#');
-      }
-    }
-  });
-  
-  jeedom.plugin.all({
-    error: function (error) {
-      $('#div_alert').showAlert({message: error.message, level: 'danger'});
-    },
-    success: function (plugins) {
-      var options = '';
-      options += '<option value="">Aucun</option>';
-      for (var i in plugins) {
-        if(plugins[i].display == ''){
-          continue;
-        }
-        options += '<option value="' + plugins[i].id + '">' + plugins[i].name + '</option>';
-      }
-      $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=plugin_id]').append(options);
-      if ('#plugin_id#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=plugin_id] option[value=#plugin_id#]').html() != undefined) {
-        $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=plugin_id]').value('#plugin_id#');
-      }
-    }
-  });
-  
-  jeedom.timeline.listFolder({
-    error: function (error) {
-      $('#div_alert').showAlert({message: error.message, level: 'danger'});
-    },
-    success: function (timelines) {
-      var options = '';
-      options += '<option value="main">Principal</option>';
-      for (var i in timelines) {
-        if(timelines[i] == 'main'){
-          continue;
-        }
-        options += '<option value="' + timelines[i] + '">' + timelines[i] + '</option>';
-      }
-      $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=timeline]').append(options);
-      if ('#timeline#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=timeline] option[value=#timeline#]').html() != undefined) {
-        $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=timeline]').value('#timeline#');
-      }
-    }
-  });
-  
-  
-  if ('#export_type#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=export_type] option[value=#export_type#]').html() != undefined) {
-    $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=export_type]').value('#export_type#');
-  }
-  if ('#type#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=type] option[value=#type#]').html() != undefined) {
-    $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=type]').value('#type#');
-  }
-  $('.listEquipementInfo[data-uid=#uid#]').off('click').on('click', function() {
-    jeedom.cmd.getSelectModal({cmd: {type: 'action',subType : 'message'}}, function(result) {
-      $('.expressionAttr[data-l1key=options][data-l2key=cmd][data-uid=#uid#]').atCaret('insert',result.human);
-    });
-  });
-  if ('#url#' != '') {
-    $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=url]').value('#url#');
-  }
+	jeedom.view.all({
+		error: function (error) {
+			$('#div_alert').showAlert({message: error.message, level: 'danger'});
+		},
+		success: function (views) {
+			var options = '';
+			options += '<option value="">Aucune</option>';
+			for (var i in views) {
+				options += '<option value="' + views[i].id + '">' + views[i].name + '</option>';
+			}
+			$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=view_id]').append(options);
+			if ('#view_id#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=view_id] option[value=#view_id#]').html() != undefined) {
+				$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=view_id]').value('#view_id#');
+			}
+		}
+	});
+	jeedom.plan.allHeader({
+		error: function (error) {
+			$('#div_alert').showAlert({message: error.message, level: 'danger'});
+		},
+		success: function (plans) {
+			var options = '';
+			options += '<option value="">Aucun</option>';
+			for (var i in plans) {
+				options += '<option value="' + plans[i].id + '">' + plans[i].name + '</option>';
+			}
+			$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=plan_id]').append(options);
+			if ('#plan_id#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=plan_id] option[value=#plan_id#]').html() != undefined) {
+				$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=plan_id]').value('#plan_id#');
+			}
+		}
+	});
+
+	jeedom.plugin.all({
+		error: function (error) {
+			$('#div_alert').showAlert({message: error.message, level: 'danger'});
+		},
+		success: function (plugins) {
+			var options = '';
+			options += '<option value="">Aucun</option>';
+			for (var i in plugins) {
+				if(plugins[i].display == ''){
+					continue;
+				}
+				options += '<option value="' + plugins[i].id + '">' + plugins[i].name + '</option>';
+			}
+			$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=plugin_id]').append(options);
+			if ('#plugin_id#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=plugin_id] option[value=#plugin_id#]').html() != undefined) {
+				$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=plugin_id]').value('#plugin_id#');
+			}
+		}
+	});
+
+	jeedom.timeline.listFolder({
+		error: function (error) {
+			$('#div_alert').showAlert({message: error.message, level: 'danger'});
+		},
+		success: function (timelines) {
+			var options = '';
+			options += '<option value="main">Principal</option>';
+			for (var i in timelines) {
+				if(timelines[i] == 'main'){
+					continue;
+				}
+				options += '<option value="' + timelines[i] + '">' + timelines[i] + '</option>';
+			}
+			$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=timeline]').append(options);
+			if ('#timeline#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=timeline] option[value=#timeline#]').html() != undefined) {
+				$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=timeline]').value('#timeline#');
+			}
+		}
+	});
+
+	if ('#export_type#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=export_type] option[value=#export_type#]').html() != undefined) {
+		$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=export_type]').value('#export_type#');
+	}
+	if ('#type#' != '' && $('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=type] option[value=#type#]').html() != undefined) {
+		$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=type]').value('#type#');
+	}
+	if ('#url#' != '') {
+		$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=url]').value('#url#');
+	}
+
+	//events if not on scenario page:
+	if ($('#div_editScenario').length == 0) {
+		$('.expressionAttr[data-uid=#uid#][data-l1key=options][data-l2key=type]').change(function(){
+			$(this).closest('select').removeClass('roundedRight')
+			$('.type[data-uid=#uid#]').hide();
+			$('.'+$(this).value()+'[data-uid=#uid#]').show();
+			if($(this).value() == 'eqAnalyse'){
+				$(this).closest('select').addClass('roundedRight')
+			}
+		});
+		$('.listEquipementInfo[data-uid=#uid#]').off('click').on('click', function() {
+			jeedom.cmd.getSelectModal({cmd: {type: 'action',subType : 'message'}}, function(result) {
+				$('.expressionAttr[data-l1key=options][data-l2key=cmd][data-uid=#uid#]').atCaret('insert', result.human);
+			});
+		});
+	}
 </script>
