--- a/desktop/css/desktop.main.css
+++ b/desktop/css/desktop.main.css
@@ -3050,6 +3050,13 @@ Theme Core 2021 @Jeedom
   .element .expressionAttr:not([data-l2key=graphColor]) {
     font-weight: bold;
   }
+  .element .expressionAttr[data-l2key="icon"] i::before {
+    background: var(--sc-form-color);
+    padding: 2.5px;
+    height: 28px;
+    color: var(--sc-formTxt-color);
+  }
+
   #div_editScenario .element .expressionAttr.insideSearch {
     background-color: var(--al-warning-color) !important;
     color: var(--linkHoverLight-color) !important;
