--- a/core/template/dashboard/cmd.info.numeric.horizontal.html
+++ b/core/template/dashboard/cmd.info.numeric.horizontal.html
@@ -14,13 +14,18 @@
   </div>
 
   <script>
-    jeedom.cmd.update['#id#'] = function(_options){
-      var cmd = $('.cmd[data-cmd_id=#id#]')
+    jeedom.cmd.update['#id#'] = function(_options) {
+      var position = _options.display_value
       var minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
       var maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
-      cmd.attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
-      var width = ((_options.display_value - minValue) * 100) / (maxValue - minValue)
+      if (position > maxValue) position = maxValue
+      if (position < minValue) position = minValue
+
+      var width = ((position - minValue) * 100) / (maxValue - minValue)
       width = Math.round(parseFloat(width) * 10) / 10
+      
+      var cmd = $('.cmd[data-cmd_id=#id#]')
+      cmd.attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
       cmd.find('.hgauge-value').width(width+'%')
       cmd.find('.state strong').first().text(_options.display_value)
     }
