--- a/core/template/mobile/cmd.info.numeric.horizontal.html
+++ b/core/template/mobile/cmd.info.numeric.horizontal.html
@@ -8,8 +8,14 @@
 
 	<script>
 		jeedom.cmd.update['#id#'] = function(_options){
-			width = ((_options.display_value - #minValue#) * 100) / (#maxValue# - #minValue#)
-			width = Math.round(parseFloat(width) * 10) / 10
+			var position = _options.display_value
+            var minValue = ('#minValue#' == '') ? 0 : parseInt('#minValue#')
+            var maxValue = ('#maxValue#' == '') ? 100 : parseInt('#maxValue#')
+            if (position > maxValue) position = maxValue
+            if (position < minValue) position = minValue
+
+            var width = ((position - minValue) * 100) / (maxValue - minValue)
+            width = Math.round(parseFloat(width) * 10) / 10
 			$('.cmd[data-cmd_uid=#uid#] .hgauge-value').width(width+'%')
 			$('.cmd[data-cmd_uid=#uid#] .state strong').first().text(_options.display_value)
 		}
