fix widget info.numeric.default

--- a/core/template/dashboard/cmd.info.numeric.default.html
+++ b/core/template/dashboard/cmd.info.numeric.default.html
@@ -5,12 +5,17 @@
 <div class="content-sm">
   <div class="gauge cursor #history#" data-cmd_id="#id#"></div>
 </div>
+<div class="value" data-cmd_id="#id#">
+  <div class="state"><strong>#state#</strong> <strong>#unite#</strong></div>
+</div>
 <div class="cmdStats #hide_history#">
   <span title='{{Min}}' class='tooltips'>#minHistoryValue#</span>|<span title='{{Moyenne}}' class='tooltips'>#averageHistoryValue#</span>|<span title='{{Max}}' class='tooltips'>#maxHistoryValue#</span> <i class="#tendance#"></i>
 </div>
 <script>
   jeedom.cmd.update['#id#'] = function(_options) {
-    $('.cmd[data-cmd_id=#id#]').attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
+    $('.cmd[data-cmd_id=#id#]')
+      .attr('title','{{Date de valeur}} : '+_options.valueDate+'<br/>{{Date de collecte}} : '+_options.collectDate)
+      .find('.state strong').first().text(_options.display_value)
     $('.cmd[data-cmd_uid=#uid#] .gauge').highcharts().series[0].points[0].update(_options.display_value)
   }
 
@@ -88,8 +93,7 @@
         radius: 92,
         innerRadius: 72,
         dataLabels: {
-          y: 6,
-          format: '<span>{y}</span> <span>#unite#</span>'
+          enabled: false
         },
       }]
     })
